# gate-controller

doc/: Sterownik bramy.docx
kicad/board/: board-cache.lib  board.kicad_pcb  board.kicad_pcb-bak  board.pro  board.sch  board.sch-bak
kicad/board/gerber/: board-B_Cu.gbr  board-B_Mask.gbr  board-B_Paste.gbr  board-B_SilkS.gbr  board-Edge_Cuts.gbr  board-F_Cu.gbr  board-F_Mask.gbr  board-F_Paste.gbr  board-F_SilkS.gbr  board-NPTH.drl  board-PTH.drl  board-job.gbrjob
src/.archive/gate-controller-board/include/: GateController.h
src/.archive/gate-controller-board/src/: GateController.cpp  RemoteController.cpp  Test.cpp
src/.archive/gate-controller-pilot-v3/: gate-controller-pilot-v3.ino
src/.archive/gate-controller-pilot/arduino-cmake/: arduino.cmake
src/.archive/gate-controller-pilot/src/: main.cpp
src/gate-controller-board/: CMakeLists.txt
src/gate-controller-board/include/: Debug.h  Pins.h  RFR.h  Receiver.h  RemoteController.h  Test.h
src/gate-controller-board/lib/RadioHead/tools/: createGPX.pl  etherSimulator.pl
src/gate-controller-board/lib/VirtualWire/: README  VirtualWire.cpp
src/gate-controller-board/src/: Debug.cpp  RFR.cpp  Receiver.cpp  main.cpp
src/gate-controller-pilot/: CMakeLists.txt
src/gate-controller-rc-cpp/: CMakeLists.txt
src/gate-controller-rc-cpp/src/: main.cpp
src/gate-controller-rcr/: gate-controller-rcr.ino
src/gate-controller-rct/: gate-controller-rct.ino
src/gate-controller-rct-v1/: gate-controller-rct.ino
src/gate-controller-v3/: gate-controller-v3.ino
src/mega_wat_rc/: mega_wat_rc.ino
